# starfield-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
data/: skills.tsv
docs/: backlog.md  decisao-abordagem.md  limitacao-containers.md  limitacao-localizacao.md
packaging/: sfasst-gui.spec
scripts/: build_systems_data.py  dump.txt  gui.sh  probe_isinloc.txt  probe_location.txt  probe_research.txt  regen_dump.py  run.sh
src/sfasst/: _config.py  _paths.py  community_tips.py  cross.py  parse_log.py  research_suggestions.py  skill_priorities.py  skill_suggestions.py  skills_report.py
src/sfasst/data/: locations.tsv  research.tsv  skills.tsv  system_aliases.tsv
src/sfasst/gui/: __main__.py  main_window.py
src/sfasst/gui/tabs/: quests.py  research.py  skills.py  status.py
